--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "9.4.9",
-    "browser-sync": "2.26.3",
+    "browser-sync": "^2.26.12",
     "css-mqpacker": "7.0.0",
     "del": "3.0.0",
     "gulp": "4.0.0",
@@ -27,11 +27,11 @@
     "gulp-stylelint": "8.0.0",
     "gulp-svg-sprite": "1.5.0",
     "gulp-svgmin": "2.1.0",
-    "gulp.spritesmith": "6.9.0",
+    "gulp.spritesmith": "^6.11.0",
     "merge-stream": "1.0.1",
     "modularscale-sass": "3.0.8",
     "node-normalize-scss": "8.0.0",
-    "node-sass": "4.11.0",
+    "node-sass": "^4.14.1",
     "run-sequence": "2.2.1",
     "stylelint": "9.10.1",
     "stylelint-order": "2.0.0",
